Rename: move htmo to public folder

--- a/public/client.html
+++ b/public/client.html
@@ -81,7 +81,7 @@
         gameRoomContain.innerHTML = `
           <div id="gameRoom">
             <button onclick="leaveGameRoom()">나가기</button>
-            <h2>방제 : 아무나 오셈</h2>
+            <h2>방제 : 아무나 환영</h2>
           </div>`
       }
 
