--- a/public/client.html
+++ b/public/client.html
@@ -9,7 +9,7 @@
         list-style-type: none;
         margin: 0;
         padding: 0;
-        width: 90%;
+        width: 95%;
         height: 150px;
         overflow-x: hidden;
         overflow-y: auto;
@@ -20,15 +20,14 @@
       #form {
         background: #000;
         padding: 3px;
+        width: fit-content;
         position: fixed;
         bottom: 0;
-        width: 100%;
       }
       #input {
         border: none;
         padding: 10px;
-        width: 90%;
-        margin-right: 0.5%;
+        width: 1000px;
       }
       #submit {
         width: 9%;
@@ -77,15 +76,38 @@
         joinLobby()
       }
 
-      const drawGameRoom = () => {
+      const drawGameRoom = (roomInfo) => {
+        const roomInfoJson = JSON.parse(roomInfo)
         gameRoomContain.innerHTML = `
           <div id="gameRoom">
             <button onclick="leaveGameRoom()">나가기</button>
-            <h2>방제 : 아무나 환영</h2>
+            <h2>${roomInfoJson.title}</h2>
+            <div id="member">
+            </div>
           </div>`
+        console.log(roomInfo)
+        const roomMembers = roomInfoJson.members
+
+        for (roomMember of roomMembers) {
+          var div = document.createElement('div')
+          div.id = `user${roomMember.id}`
+          div.innerHTML = roomMember.nickname
+          member.appendChild(div)
+        }
       }
 
-      const addChatEvnetListener = () => {
+      const addGameRoomMember = (userInfo) => {
+        var div = document.createElement('div')
+        div.id = `user${userInfo.id}`
+        div.innerHTML = userInfo.nickname
+        member.appendChild(div)
+      }
+
+      const removeGameRoomMember = (userId) => {
+        document.getElementById(`user${userId}`).remove()
+      }
+
+      const addChatEventListener = () => {
         socket.on('chat', (msg) => {
           var messages = document.getElementById('messages')
           var li = document.createElement('li')
@@ -95,17 +117,33 @@
         })
       }
 
+      const addDrawGameRoomEventListener = () => {
+        socket.on('draw game room', (roomInfo) => {
+          drawGameRoom(roomInfo)
+        })
+      }
+
+      const addRefreshRoomEventListener = () => {
+        socket.on('add game room member', (userInfo) => {
+          addGameRoomMember(JSON.parse(userInfo))
+        })
+        socket.on('remove game room member', (userId) => {
+          removeGameRoomMember(userId)
+        })
+      }
+
       const joinLobby = () => {
         socket = io('http://localhost:3000/lobby')
-        addChatEvnetListener()
+        addChatEventListener()
 
-        socket.on('load game room', (rooms) => {
+        socket.on('load game room', (gameRooms) => {
           var gameRoomList = document.getElementById('gameRoomList')
           gameRoomList.innerHTML = ''
-          for (roomInfo of rooms) {
+          const gameRoomsJson = JSON.parse(gameRooms)
+          for (const gameRoom in gameRoomsJson) {
             var newRoom = document.createElement('div')
-            newRoom.id = JSON.parse(roomInfo).id
-            newRoom.textContent = roomInfo
+            newRoom.id = gameRoom
+            newRoom.textContent = JSON.stringify(gameRoomsJson[gameRoom])
             gameRoomList.appendChild(newRoom)
 
             // 누르면 참가하기 이벤트 리스너 등록
@@ -116,17 +154,28 @@
           }
         })
 
-        socket.on('new game room', (roomInfo) => {
+        socket.on('new game room', (gameRoom) => {
           var gameRoomList = document.getElementById('gameRoomList')
           var newRoom = document.createElement('div')
-          newRoom.id = JSON.parse(roomInfo).id
-          newRoom.textContent = roomInfo
+          const gameRoomJson = JSON.parse(gameRoom)
+
+          newRoom.id = gameRoomJson.gameRoomId
+          newRoom.textContent = gameRoom
+
           gameRoomList.appendChild(newRoom)
 
           // 누르면 참가하기 이벤트 리스너 등록
           newRoom.addEventListener('click', function (event) {
             joinGameRoom(event.target.id)
           })
+        })
+
+        socket.on('refresh game room', (gameRoom) => {
+          const gameRoomJson = JSON.parse(gameRoom)
+          const targetRoomId = gameRoomJson.gameRoomId
+
+          const targetGameRoom = document.getElementById(targetRoomId)
+          targetGameRoom.textContent = gameRoom
         })
 
         socket.on('remove game room', (roomId) => {
@@ -137,25 +186,25 @@
       const createGameRoom = () => {
         socket.disconnect()
         socket = io('http://localhost:3000/gameRoom')
-        addChatEvnetListener()
+        addChatEventListener()
+        addRefreshRoomEventListener()
+        addDrawGameRoomEventListener()
 
         socket.on('connect', () => {
           socket.emit('create game room')
         })
-
-        drawGameRoom()
       }
 
       const joinGameRoom = (roomId) => {
         socket.disconnect()
         socket = io('http://localhost:3000/gameRoom')
-        addChatEvnetListener()
+        addChatEventListener()
+        addRefreshRoomEventListener()
+        addDrawGameRoomEventListener()
 
         socket.on('connect', () => {
           socket.emit('join game room', roomId)
         })
-
-        drawGameRoom()
       }
 
       joinLobby()
